--- a/produtos_front/src/pages/cadastro/index.css
+++ b/produtos_front/src/pages/cadastro/index.css
@@ -1,11 +1,14 @@
 .register-page{
-    background: aqua;
-    height: 85vh;
-    margin: 35px 50px;
-    padding: 20px;
+    height: 100vh;
+    padding: 50px 40px ;
     text-align: center;
     justify-content: space-around;
     line-height: 40px;
     font-weight: bold;
     font-size: 20px;
+}
+.form{
+    background: rgba(242, 241, 170, 0.5);
+    padding: 10px;
+    border-radius: 20px;
 }
