--- a/produtos_front/src/pages/main/index.css
+++ b/produtos_front/src/pages/main/index.css
@@ -43,10 +43,12 @@
     color: #000;
 }
 .button-link{
-    margin-top: 40px;
+    margin: 0 10px;
+    margin-top: 30px;
     width: 150px;
     height: 50px;
     font-size: 18px;
+    
 }
 button a:hover{
     color: rgb(36, 35, 35);
