--- a/produtos_front/src/pages/login/index.css
+++ b/produtos_front/src/pages/login/index.css
@@ -1,7 +1,7 @@
 .login-page{
     width: 100%;
     height: 100vh;
-    padding: 40px ;
+    padding: 10px 20px;
     text-align: center;
     justify-content: space-around;
 }
