--- a/produtos_front/src/pages/main/index.css
+++ b/produtos_front/src/pages/main/index.css
@@ -66,6 +66,7 @@ button a:hover{
     font-size: 25px;
 }
 .text2{
-    font-size: 35px;
+    font-size: 45px;
     line-height: 60px;
+    font-weight: 600;
 }
