--- a/produtos_front/src/pages/produtos/index.css
+++ b/produtos_front/src/pages/produtos/index.css
@@ -2,9 +2,11 @@
     justify-content: center;
 }
 .products-main{
-    height: 88.6vh;
+    height: 100%;
     text-align: center;
     justify-content: space-around;
+    padding: 10px 20px;
+    padding-bottom: 66px;
 }
 .article{
     padding: 30px;
@@ -14,8 +16,8 @@
     height: 100px;
 }
 .card{
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 350px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 20px;
